[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/turingdb/**/*.py", "src/turingdb/**/*.pyi"]

[project]
name = "turingdb"
version = "0.2.1"
description = "TuringDB python sdk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "orjson>=3.11.1",
    "pandas>=2.3.1",
]

[project.urls]
Homepage = "https://github.com/turing-db/turingdb-sdk-python"
Repository = "https://github.com/turing-db/turingdb-sdk-python"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.8",
]
