[project]
name = "turingdb"
dynamic = ["version"]
description = "TuringDB python sdk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "orjson>=3.11.1",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "click>=8.2.1",
    "prompt-toolkit>=3.0.52",
    "boto3>=1.40.55",
]

[project.urls]
Homepage = "https://github.com/turing-db/turingdb-sdk-python"
Repository = "https://github.com/turing-db/turingdb-sdk-python"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv.workspace]
members = [
    "testapp",
]

[project.scripts]
turingsh = "turingdb:turingsh"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.8",
]
